Subresources loaded after a reload completes shouldn't be revalidated. https://bugs.webkit.org/show_bug.cgi?id=84614

Source/WebCore:

Based on patch by Darin Fisher.

Reviewed by Darin Fisher.

Tests: http/tests/cache/loaded-from-cache-after-reload-within-iframe.html
       http/tests/cache/loaded-from-cache-after-reload.html

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::checkLoadCompleteForThisFrame): Reset m_loadType after the load completes.

LayoutTests:

Tests by Darin Fisher.

Reviewed by Darin Fisher.

* http/tests/cache/loaded-from-cache-after-reload-expected.txt: Added.
* http/tests/cache/loaded-from-cache-after-reload-within-iframe-expected.txt: Added.
* http/tests/cache/loaded-from-cache-after-reload-within-iframe.html: Added.
* http/tests/cache/loaded-from-cache-after-reload.html: Added.
* http/tests/cache/resources/loaded-from-cache-after-reload-within-iframe-subframe.html: Added.
* http/tests/cache/resources/random-cached.cgi: Added.


Canonical link: https://commits.webkit.org/103628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116584 268f45cc-cd09-0410-ab3c-d52691b4dbfc